--- a/css/animationLogo.css
+++ b/css/animationLogo.css
@@ -11,7 +11,7 @@
     width: 100px;
     height: 100px;
     background-color: red;
-    animation-name: <link;
+    animation-name: linked-in;
     animation-duration: 4s;
     animation-iteration-count: infinite;    
   } 
