--- a/css/animationLogo.css
+++ b/css/animationLogo.css
@@ -1,17 +1,24 @@
  /* The animation code */
-@keyframes animatedSquare {
-    0%   {background-color: red;}
-    25%  {background-color: yellow;}
-    50%  {background-color: blue;}
-    100% {background-color: green;}
+@keyframes rotate 
+ {
+    0% {
+      transform: rotate(360deg);
+      top:200px;
+      left: 10px
+    }
+     
+    100% {
+      top: 300px;
+      left: 300px;
+      border-radius: 3rem 2rem;
+    }
   }
-  
-  /* The element to apply the animation to */
+     /* The element to apply the animation to */
   div {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    animation-name: animatedSquare;
-    animation-duration: 4s;
+    width: 300px;
+    height: 300px;
+    background-color: blue;
+    animation-name: rotate;
+    animation-duration: 5s;
     animation-iteration-count: infinite;    
   } 
