--- a/css/animationLogo.css
+++ b/css/animationLogo.css
@@ -3,20 +3,20 @@
  {
     0% {
       transform: rotate(360deg);
-      top:200px;
+      float:  left;
+      bottom: 80px;
       left: 10px
     }
      
     100% {
-      top: 300px;
-      left: 300px;
-      border-radius: 3rem 2rem;
-    }
+      bottom: 80px;
+      left: 50px;
+          }
   }
      /* The element to apply the animation to */
   div {
-    width: 300px;
-    height: 300px;
+    width: 50px;
+    height: 50px;
     background-color: blue;
     animation-name: rotate;
     animation-duration: 5s;
